--- a/style.css
+++ b/style.css
@@ -346,8 +346,45 @@ nav{
     display: flex;
 }
 .slick_slide{
-    display: flex;
+    display: flex !important;
+    background-color: white;
+    width: 600px;
+    height: 250px;
+    margin-top: 30px;
+    align-items: center;
+   
 }
+/* .slick_slide{
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+
+
+} */
+ .two_buttons{
+    display: flex;
+    width:300px;
+    height: 40px;
+    padding: 10px;
+ }
+ .second_button{
+    margin-left: 20px;
+    background-color:rgb(216, 208, 208);
+    width: 150px;
+    border: none;
+ }
+ .first_button{
+    width: 150px;
+    border:none ;
+    background-color: rgb(240, 204, 111);
+ }
+
+ .slick_slide_section{
+    width: 600px;
+ }
+ 
+ 
 
 
 
