--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ nav{
 .slide_section{
     background-image: url(./Library/images/second_bg.jpg);
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     height: 700px;
 }
@@ -186,11 +187,11 @@ nav{
     font-weight: bold;
     color: white;
     margin-top:40px;
-    color: rgb(56, 244, 90);
+    color: #10e710;
 }
 .slide_ptwo{
     font-size: 25px;
-    color: rgb(205, 16, 16);
+    color: rgb(249, 97, 166);
 }
 .slide_description{
     align-items: center;
@@ -293,6 +294,7 @@ nav{
 .features{
     background-image: url(./Library/images/third_bg.png);
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     height: 900px;
 }
@@ -330,20 +332,29 @@ nav{
     height: 100px;
 }
 .one_fearure{
-    display: flex;
     background-color: white;
+    width: 200px;
+    margin-right: 30px;
+   
 }
 .two_fearures{
-    display: flex;
+    
     background-color: white;
+    width: 200px;
+    margin-right: 30px;
 }
 .three_features{
-    display: flex;
+    
     background-color: white;
+    width: 200px;
     
 }
 .three_services{
     display: flex;
+    justify-content: center;
+    margin-top: 30px;
+   
+
 }
 .slick_slide{
     display: flex !important;
@@ -352,6 +363,7 @@ nav{
     height: 250px;
     margin-top: 30px;
     align-items: center;
+    justify-content: center;
    
 }
 /* .slick_slide{
@@ -362,6 +374,12 @@ nav{
 
 
 } */
+
+.three_images{
+    transform: scale(1.1);
+    transition: .4s;
+    opacity: 1;
+}
  .two_buttons{
     display: flex;
     width:300px;
@@ -382,6 +400,7 @@ nav{
 
  .slick_slide_section{
     width: 600px;
+    margin: 0 auto;
  }
  
  
