--- a/style.css
+++ b/style.css
@@ -171,9 +171,21 @@ nav{
     justify-content: center;
     flex-direction: column;
     margin: 0 auto;
-    margin-left: 450px;
-    padding-bottom: 100px;
+    font-size: 20px;
+    padding: 20px;
 }
+.imogeo{
+    display: flex;
+    padding: 20px;
+ }
+ .restaurant_images{
+    margin-right: 30px;
+ }
+ .restaurant_images:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+ }
+
 /* start slide section */
 .slide_section{
     background-image: url(./Library/images/second_bg.jpg);
@@ -309,10 +321,21 @@ nav{
     font-weight: bold;
     margin-top: 60px;
 }
+.one_fearure:hover .images_three{
+transform: scale(1.1); 
+
+}
+.two_fearures:hover .images_two{
+    transform: scale(1.1);
+}
+
+.three_features:hover .image_one{
+    transform: scale(1.1);
+}
 .featurep_two{
     font-size: 30px;
     color:white;
-}
+} 
 .feature_div{
     display: flex;
     align-items: center;
@@ -323,32 +346,35 @@ nav{
     width: 200px;
     height: 100px;
 }
-.images_two{
+ .images_two{
     width: 200px;
     height: 100px;
-}
-.image_one{
+} 
+ .image_one{
     width: 200px;
     height: 100px;
-}
+} 
 .one_fearure{
     background-color: white;
     width: 200px;
     margin-right: 30px;
+    padding: 20px;
    
 }
-.two_fearures{
+ .two_fearures{
     
     background-color: white;
     width: 200px;
     margin-right: 30px;
-}
+    padding: 20px;
+} 
 .three_features{
     
     background-color: white;
     width: 200px;
+    padding: 20px;
     
-}
+} 
 .three_services{
     display: flex;
     justify-content: center;
@@ -376,16 +402,32 @@ nav{
 } */
 
 .three_images{
-    transform: scale(1.1);
-    transition: .4s;
-    opacity: 1;
+margin-top: 20px;
+margin-right: 20px;
+
 }
+
+
  .two_buttons{
     display: flex;
     width:300px;
     height: 40px;
     padding: 10px;
  }
+ .first_button:hover {
+    cursor: pointer;
+    background-color: rgb(246, 173, 83);
+
+ }
+ .second_button:hover{
+    cursor: pointer;
+    background-color: gray;
+ }
+ .three_images:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+ }
+ 
  .second_button{
     margin-left: 20px;
     background-color:rgb(216, 208, 208);
@@ -402,7 +444,41 @@ nav{
     width: 600px;
     margin: 0 auto;
  }
- 
+ /* start menu section */
+ .our_menu{
+    font-size: 30px;
+    font-weight:bold ;
+ }
+ .our_menu_p{
+    font-size: 25px;
+   
+ }
+ .menu_p{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+ }
+ .underline{
+    width: 30px;
+    height: 1px;
+    width: 1px;
+    color: rgb(242, 174, 47);
+ }
+ .menu_list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+ }
+ .menu_list a{
+    color: black;
+    
+    
+ }
  
 
 
